--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tradeview",
   "version": "1.0.0",
   "private": true,
+  "author": "Leonardo Restrepo <willeores@gmail.com>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
